WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
234311
[Playstation] Fix build break after
r286908
https://bugs.webkit.org/show_bug.cgi?id=234311
Summary
[Playstation] Fix build break after r286908
Basuke Suzuki
Reported
2021-12-14 13:52:02 PST
<optinal> is missing.
Attachments
PATCH
(1.19 KB, patch)
2021-12-14 13:56 PST
,
Basuke Suzuki
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Basuke Suzuki
Comment 1
2021-12-14 13:56:55 PST
Created
attachment 447157
[details]
PATCH
EWS
Comment 2
2021-12-14 14:39:27 PST
Committed
r287051
(
245248@main
): <
https://commits.webkit.org/245248@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 447157
[details]
.
Radar WebKit Bug Importer
Comment 3
2021-12-14 14:40:16 PST
<
rdar://problem/86490030
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug