[Playstation] Fix build break after r286908 https://bugs.webkit.org/show_bug.cgi?id=234311

Unreviewed, build fix for PlayStation platform after r286908.
https://trac.webkit.org/changeset/286908/webkit


* platform/graphics/PlatformVideoColorSpace.h:



Canonical link: https://commits.webkit.org/245248@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@287051 268f45cc-cd09-0410-ab3c-d52691b4dbfc